@@ -6,17 +6,18 @@ import org.testng.annotations.Test;
 import java.util.*;
 import java.util.stream.Collectors;
 
-public class P_M_1_N13_Group_Anagrams {
+public class P_M_N13_1_Group_Anagrams {
     /*
 leetcode.com/problems/group-anagrams/
 
-Given an array of strings strs, group the anagrams together. You can return the answer in any order.
+Given an array of strings strs, group the anagrams together.
+You can return the answer in any order.
 
 An Anagram is a word or phrase formed by rearranging the letters of a different word or phrase,
 typically using all the original letters exactly once.
 
 Constraints:
-1 <= strs.length <= 104
+1 <= strs.length <= 10^4
 0 <= strs[i].length <= 100
 strs[i] consists of lowercase English letters.
 */
@@ -44,8 +45,8 @@ strs[i] consists of lowercase English letters.
     @Test
     public void ex4() {
         String[] strs = {"one, two, three, four, five, six"};
-        Assert.assertEquals(groupAnagram(strs), Arrays.asList(List.of("one"),List.of("two"), List.of("three"),
-                    List.of("four"), List.of("five"), List.of("six")));
+        Assert.assertEquals(groupAnagram(strs), Arrays.asList(List.of("one"),List.of("two"),
+                List.of("three"),List.of("four"), List.of("five"), List.of("six")));
     }
 
 /*
@@ -53,7 +54,8 @@ pseudoCode
 1. create a hashmap with String key and Arraylist as value
 2. consider each string from the string array
 3. Get first string and convert to array and sort the array
-4. add the sorted string as key and sort the string and compare with key and add the real string which matches with key
+4. add the sorted string as key and sort the string and compare with key and
+add the real string which matches with key
 5. return the values as List<List<String>>;
 */
 
@@ -75,9 +77,9 @@ pseudoCode
     }
 
     //without Arrays.sort()
-    public List<List<String>> groupAnagram(String[] strs) {
+    public List<List<String>> groupAnagram2(String[] strs) {
 
-        if (strs.length < 1) return Arrays.asList(List.of());
+        if (strs.length < 1) return Arrays.asList(List.of());;
         Map<Map<Character, Integer>, List<String>> map = new HashMap<>();
 
         for (String str : strs) {
@@ -89,7 +91,27 @@ pseudoCode
             List<String> list = map.getOrDefault(hmap, new ArrayList<>());
             list.add(str);
             map.put(hmap, list);
+        }
+        return map.values().stream().collect(Collectors.toList());
+    }
 
+    //without sort
+    public List<List<String>> groupAnagram(String[] strs) {
+
+        if (strs.length < 1) return Arrays.asList(List.of());
+        Map<Map<Character, Integer>, List<String>> map = new HashMap<>();
+        Map<Character, Integer> hmap = new HashMap<>();
+
+        for (String str : strs) {
+            int[] arr = new int[26];
+            for(char c: str.toCharArray()){
+                arr[c-'a']++;
+                hmap.put(c, hmap.getOrDefault(String.valueOf(arr), 0)+1);
+            }
+
+            List<String> list = map.getOrDefault(hmap, new ArrayList<>());
+            list.add(str);
+            map.put(hmap, list);
         }
         System.out.println(map.values().stream().collect(Collectors.toList()));
         return map.values().stream().collect(Collectors.toList());
